# rust-learning

No.1 guess/: Cargo.toml
No.1 guess/src/: main.rs
No.10 adder/src/: lib.rs
No.10 adder/tests/: integration_test.rs
No.11 minigrep/: Cargo.toml
No.11 minigrep/src/: lib.rs  main.rs
No.12 closures/: Cargo.toml
No.12 closures/src/: main.rs
No.13 trait-demo/src/: lib.rs
No.14 lifetime/: Cargo.toml
No.14 lifetime/src/: main.rs
No.15 list/: Cargo.toml
No.15 list/src/: main.rs
No.16 smart-point/: Cargo.toml
No.16 smart-point/src/: liib.rs  (+2 more)
No.17 memory-leak/: Cargo.toml
No.18 thread/: Cargo.toml
No.19 walk-dir/: Cargo.toml
No.4 owership/: Cargo.toml
No.5 slice/: Cargo.toml
No.6 structs/: Cargo.toml
No.7 enums/: Cargo.toml
No.8 flow/: Cargo.toml
adder/: Cargo.toml
branch/: Cargo.toml
cli/: Cargo.toml  test-journal.json
cli/src/: cli.rs  main.rs  tasks.rs
diesel_demo/: Cargo.toml  my.db  test.db
doctests_exercise/: Cargo.toml
hash-demo/: Cargo.toml
iterator-demo/: Cargo.toml
module-demo/: Cargo.toml
request/: Cargo.toml
restaurant/: Cargo.toml
rss_reader/: Cargo.toml
tauri-app/: package-lock.json  package.json
tauri-app/src-tauri/: Cargo.toml  my.db  tauri.conf.json
tauri-app/src-tauri/migrations/2022-01-29-084119_create_channels/: down.sql
tauri-app/src-tauri/migrations/2022-01-30-055412_create_articles/: down.sql  up.sql
tauri-app/src-tauri/src/: command.rs  db.rs  lib.rs  main.rs  models.rs  schema.rs
test-demo/: Cargo.toml
trait-demo/: Cargo.toml
variables/: Cargo.toml
webdav/: Cargo.toml
(+72 files in other folders)
